- Fixes to existing classes so it isn't so ugly - Added StringLiteralNode